# Umpire

./: .gitignore  .travis.yml  Cargo.toml  README.md
ai/: 10-30_e100_s100000_a__scorefix__turnpenalty.ai  10-40+full_e100_s100000_a.ai  10x10_100eps_1000000steps.ai  10x10_e100_s100000_a__scorefix__turnpenalty.ai  ai.model
ai/lfa/: 10x10_100eps_1000000steps__opponent.ai  20x20_e100_s100000_a__scorefix__turnpenalty.ai
benches/: ai_train.rs  deref_vec.rs  explore.rs  grid.rs  move_unit_by_id.rs  move_unit_by_id_in_direction.rs  nearest_adjacent_unobserved.rs  propose.rs  random_ai.rs  wrapping.rs  wrapping_lite.rs
client/: Cargo.toml
client/src/: lib.rs  main.rs  tile.rs  ui.rs
client/src/game/: ai.rs  mod.rs  obs_draw.rs
client/src/game/ai/: dnn.rs  random.rs  rl.rs  samodel.rs
client/src/ui/: audio.rs  buf.rs  indicators.rs  log.rs  map.rs  mode.rs  scroll.rs  sym.rs
client/src/ui/mode/: examine.rs  get_orders.rs  get_unit_orders.rs  quit.rs  set_production.rs  set_productions.rs  turn_over.rs  turn_resume.rs  turn_start.rs  victory.rs
common/: Cargo.toml
common/src/: cli.rs  colors.rs  conf.rs  game.rs  lib.rs  log.rs  name.rs  rpc.rs  util.rs
common/src/game/: action.rs  ai.rs  alignment.rs  city.rs  combat.rs  error.rs  igameimpl.rs  map.rs  move_.rs  obs.rs  player.rs  proposed.rs  test_support.rs  tests.rs  traits.rs  turn.rs  turn_async.rs  unit.rs
common/src/game/map/: dijkstra.rs  gen.rs  grid.rs  terrain.rs  tile.rs
common/src/game/unit/: orders.rs
data/: extract_cities.py
data/us-census/1990/: givenname_rel_freqs.csv
data/us-census/2010/: surname_freqs.csv
doc/: ai_ideas.md  datagen-stats.md  name_ideas.md  roadmap.md  todo.md  wishlist.md
images/: 1945_Baseball_Umpire.txt
net/: startup-client-session-10-apr-2023  startup-client-session-18-apr-2023  startup-client-session-18-apr-2023-2  startup-client-session-30-mar-2023
profiling/: umpire-ai_eval_perf-stat.2020-04-17T23:57:45-07:00.e29d2a0  umpire-ai_eval_perf-stat.2020-04-18T03:35:13-07:00.8dcdde5  umpire-ai_eval_perf-stat.indexed-obs-update  umpire-ai_massif_post-grid-reform  umpire-ai_massif_pre-grid-reform  umpire_massif_post-grid-reform  umpire_massif_pre-grid-reform
profiling/perf/record/: umpire-ai_train.2020-04-18T06:01:38-07:00.8b811bb
profiling/perf/stat/: umpire-ai_agztrain2  umpire-ai_eval.indexed-turn-done  umpire-ai_eval_rr.2024-05-03T23:53:35-07:00.49df1c5  umpire-ai_eval_rr00.2024-05-07T11:53:33-07:00.9eabd8c  umpire-ai_train.2020-04-18T05:35:57-07:00.c3d3627  umpire-ai_train.2020-04-18T06:01:38-07:00.8b811bb  umpire-ai_train.2020-04-18T19:01:54-07:00.3190d43  umpire-ai_train.2020-04-18T19:22:50-07:00.100caa5  umpire-ai_train.num-observed-from-counter  umpire-ai_train.sparse-observations
scripts/: RRdatagen.sh  benchall.sh  broken-graph.py  compareall.sh  datagen.sh  dnn-graph.py  eval.sh  graph.py  id.sh  non-keras-graph.py  perf-disable.sh  perf-enable.sh  perfrec.sh  r0datagen.sh  simple-graph.py  train-agz-ai.sh  umpire-ai_eval_perf-record-to-id.sh  umpire-ai_eval_perf-record.sh  umpire-ai_eval_perf-stat-to-id.sh  umpire-ai_eval_perf-stat.sh  umpire-ai_eval_rr00_perf-record-to-id.sh  umpire-ai_eval_rr00_perf-record.sh  umpire-ai_eval_rr00_perf-stat-to-id.sh  umpire-ai_eval_rr00_perf-stat.sh  umpire-ai_eval_rr_perf-record-to-id.sh  umpire-ai_eval_rr_perf-record.sh  umpire-ai_eval_rr_perf-stat-to-id.sh  umpire-ai_eval_rr_perf-stat.sh  umpire-ai_train_deep_perf-record-to-id.sh  umpire-ai_train_deep_perf-record.sh  umpire-ai_train_deep_perf-stat-to-id.sh  umpire-ai_train_deep_perf-stat.sh  umpire-ai_train_perf-record-to-id.sh  umpire-ai_train_perf-record.sh  umpire-ai_train_perf-stat-to-id.sh  umpire-ai_train_perf-stat.sh
server/: Cargo.toml  umpired.service
server/src/: cli.rs  main.rs
src/: TODO.md  cli.rs  color.rs  conf.rs  game.rs  lib.rs  log.rs  macros.rs  main.rs  name.rs  ui.rs  unit.rs  util.rs
src/game/: ai.rs  city.rs  combat.rs  map.rs  mod.rs  move_.rs  obs.rs  player.rs  unit.rs
src/game/ai/: dnn.rs  random.rs  rl.rs
src/game/map/: dijkstra.rs  gen.rs  grid.rs  mod.rs  newmap.rs  terrain.rs  tile.rs
src/game/unit/: combat.rs  mod.rs  orders.rs
src/map/: dijkstra.rs  gen.rs  grid.rs  mod.rs  newmap.rs  test.rs
src/ui/: audio.rs  buf.rs  color.rs  current_player.rs  indicators.rs  log.rs  map.rs  mod.rs  mode.rs  scroll.rs  set_production.rs  sound.rs  style.rs  sym.rs
src/ui/mode/: carry_out_orders.rs  carry_out_unit_orders.rs  examine.rs  get_orders.rs  get_unit_orders.rs  mod.rs  quit.rs  set_production.rs  set_productions.rs  turn_over.rs  turn_resume.rs  turn_start.rs  victory.rs
src/unit/: combat.rs  mod.rs  orders.rs
umpire/ai/: Cargo.toml
umpire/ai/src/: agz.rs  data.rs  dnn.rs  lib.rs  main.rs  random.rs  rl.rs  skip.rs
umpire/tui/: Cargo.toml
umpire/tui/src/: color.rs  lib.rs  map.rs  obs_draw.rs  scroll.rs  sym.rs  tile.rs
