[package]
name = "umpire"
description = "Combat Quest of the Millennium"
version = "0.5.0-pre"
authors = ["Josh Hansen <hansen.joshuaa@gmail.com>"]
license = "GPL-3.0-only"
categories = ["games"]
edition = "2018"
default-run = "umpire"
include = [
    "src/*",
    "README.md",
    "LICENSE",
    "doc/roadmap.md",
    "data/geonames_cities1000_2017-02-27_0201__pop-and-name.tsv.gz",
    "data/us-census/1990/givenname_rel_freqs.csv",
    "data/us-census/2010/surname_freqs.csv",
    "images/1945_Baseball_Umpire.txt",
]
repository = "https://github.com/joshhansen/Umpire"
homepage = "https://github.com/joshhansen/Umpire"

[badges]
travis-ci = { repository = "joshhansen/Umpire" }

[dependencies]
bincode = "1.2.1"
clap = "2.33.0"
cpal = "0.10.0"
crossterm = "0.16.0"
csv = "1.1.3"
dasp = "0.11.0"
failure = "0.1.6"
flate2 = "1.0.13"
half = "1.5.0"
lfa = "0.13.0"
ndarray = "0.12.1"
pastel = "0.7.0"
pitch_calc = "0.11.1"
#rsrl = "0.7.1"
#rsrl = { path = "/home/josh/Projects/External/rsrl/rsrl", features = ["serialize"] }
rsrl = { git = "https://github.com/joshhansen/rsrl", branch="master_deref_vec_explicit_update", features = ["serialize"] }
serde = { version = "1.0.106", features = ["derive"] }
spaces = "5.0.0"
synth = { git = "https://github.com/dritory/synth" }
rand = "0.7.3"
tch = "0.1.7"
#tch = { path = "/home/josh/Projects/External/tch-rs" }
unicode-segmentation = "1.6.0"

blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }


[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "ai_train"
harness = false
path = "benches/ai_train.rs"

[[bench]]
name = "deref_vec"
harness = false
path = "benches/deref_vec.rs"

[[bench]]
name = "explore"
harness = false
path = "benches/explore.rs"

[[bench]]
name = "grid"
harness = false
path = "benches/grid.rs"

[[bench]]
name = "move_unit_by_id"
harness = false
path = "benches/move_unit_by_id.rs"

[[bench]]
name = "move_unit_by_id_in_direction"
harness = false
path = "benches/move_unit_by_id_in_direction.rs"

[[bench]]
name = "nearest_adjacent_unobserved"
harness = false
path = "benches/nearest_adjacent_unobserved.rs"

[[bench]]
name = "propose"
harness = false
path = "benches/propose.rs"

[[bench]]
name = "random_ai"
harness = false
path = "benches/random_ai.rs"

[[bench]]
name = "wrapping_lite"
harness = false
path = "benches/wrapping_lite.rs"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true # Link-time optimization is also dropping binary size by about 1100K
