[package]
name = "umpire"
description = "Combat Quest of the Millennium"
version = "0.5.0-pre"
authors = ["Josh Hansen <hansen.joshuaa@gmail.com>"]
license = "GPL-3.0-only"
categories = ["games"]
edition = "2021"
include = [
    "src/*",
    "README.md",
    "LICENSE",
    "doc/roadmap.md",
    "data/geonames_cities1000_2017-02-27_0201__pop-and-name.tsv.gz",
    "data/us-census/1990/givenname_rel_freqs.csv",
    "data/us-census/2010/surname_freqs.csv",
    "images/1945_Baseball_Umpire.txt",
]
repository = "https://github.com/joshhansen/Umpire"
homepage = "https://github.com/joshhansen/Umpire"

[workspace]
members = ["common", "client", "server", "umpire/ai", "umpire/tui"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.68"
clap = "4.1.4"
crossterm = "0.25.0"
failure = "0.1.6"
futures = "0.3.27"
rand = "~0.7.3"
#rsrl = "0.7.1"
#rsrl = { path = "/home/josh/Projects/External/rsrl/rsrl", features = ["serialize"] }
rsrl = { git = "https://github.com/joshhansen/rsrl", branch="master_deref_vec_explicit_update", features = ["serialize"] }
serde = { version = "1.0.106", features = ["derive"] }
tarpc = { version = "0.31", features = ["full"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }

[badges]
travis-ci = { repository = "joshhansen/Umpire" }

[dependencies]


[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "ai_train"
harness = false
path = "benches/ai_train.rs"

[[bench]]
name = "deref_vec"
harness = false
path = "benches/deref_vec.rs"

[[bench]]
name = "explore"
harness = false
path = "benches/explore.rs"

[[bench]]
name = "grid"
harness = false
path = "benches/grid.rs"

[[bench]]
name = "move_unit_by_id"
harness = false
path = "benches/move_unit_by_id.rs"

[[bench]]
name = "move_unit_by_id_in_direction"
harness = false
path = "benches/move_unit_by_id_in_direction.rs"

[[bench]]
name = "nearest_adjacent_unobserved"
harness = false
path = "benches/nearest_adjacent_unobserved.rs"

[[bench]]
name = "propose"
harness = false
path = "benches/propose.rs"

[[bench]]
name = "random_ai"
harness = false
path = "benches/random_ai.rs"

[[bench]]
name = "wrapping_lite"
harness = false
path = "benches/wrapping_lite.rs"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true # Link-time optimization is also dropping binary size by about 1100K
