[package]
name = "umpire"
version = "0.5.0-pre"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = "1.2.1"
burn-wgpu = { workspace = true }
clap = { workspace = true }
common = { path = "../common" }
crossterm = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tarpc = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
umpire-ai = { path = "../umpire/ai" }
umpire-tui = { path = "../umpire/tui" }
uuid = { workspace = true }

# Audio
cpal = "0.10.0"
dasp = "0.11.0"
pitch_calc = "~0.12"
synth = { git = "https://github.com/dritory/synth" }
