[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
csv = "1.1.3"
failure = { workspace = true }
flate2 = "1.0.13"
rand = { workspace = true }
rsrl = { workspace = true }
serde = { workspace = true }
unicode-segmentation = "1.6.0"