[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
csv = "1.1.3"
#delegate = "0.9.0"
delegate = { git = "https://github.com/kobzol/rust-delegate", branch = "unwrap" }
failure = { workspace = true }
flate2 = "1.0.13"
futures = { workspace = true }
rand = { workspace = true }
rsrl = { workspace = true }
serde = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
unicode-segmentation = "1.6.0"
uuid = { workspace = true }