[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
csv = "1.1.3"
#delegate = "0.9.0"
delegate = { git = "https://github.com/kobzol/rust-delegate", branch = "unwrap" }
flate2 = { workspace = true }
futures = { workspace = true }
lazy_static = "1.4.0"
rand = { workspace = true }
regex = "1.10.4"
serde = { workspace = true }
tarpc = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
unicode-segmentation = "1.6.0"
uuid = { workspace = true }
