[package]
name = "umpire-server"
version = "0.5.0-pre"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
common = { path = "../common" }
futures = "0.3"
tarpc = { version = "0.31", features = ["full"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
