[package]
name = "umpire-server"
version = "0.5.0-pre"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
common = { path = "../common" }
futures = "0.3"
serde = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true}