[package]
name = "umpired"
version = "0.5.0-pre"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
burn-wgpu = { workspace = true }
clap = { workspace = true }
common = { path = "../common" }
futures = "0.3"
serde = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true}
umpire-ai = { path = "../umpire/ai" }
get_if_addrs = "0.5.3"
