[package]
name = "umpire-ai"
version = "0.5.0-pre"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = "1.2.1"
clap = { workspace = true }
common = { path = "../../common" }
crossterm = { workspace = true }
failure = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tarpc = { workspace = true }
tch = { version = "~0.11.0", optional = true }
tokio = { workspace = true }
uuid = { workspace = true }

umpire-tui = { path = "../tui" }

# AI/ML
rsrl = { workspace = true }

#tch = { path = "/home/josh/Projects/External/tch-rs" }

# BLAS for rsrl
blas-src = { workspace = true }
openblas-src = { workspace = true }

[features]
default = []
pytorch = ["dep:tch"]