[package]
name = "umpire-ai"
version = "0.5.0-pre"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
common = { path = "../../common" }
crossterm = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

umpire-tui = { path = "../tui" }

# AI/ML
burn = { version = "0.13", default-features = false, features = ["wgpu", "std", "fusion", "autotune"] }
burn-autodiff = "0.13"
burn-train = "0.13"
burn-wgpu = { workspace = true }
flate2 = { workspace = true }
num-traits = "0.2.18"
