[package]
name = "umpire-tui"
version = "0.5.0-pre"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
common = { path = "../../common" }
crossterm = { workspace = true }
pastel = "~0.9.0"
rand = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
